--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,16 +8,24 @@
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
-    --font-size-xs: 0.75rem;
+
+        --font-size-xs: 0.75rem;
     --font-size-sm: 0.875rem;
     --font-size-base: 1rem;
     --font-size-lg: 1.125rem;
     --font-size-xl: 1.25rem;
+
+    --color-pm_green_001: #d9ead3;
+    --color-pm_gray_001: #666666;
+    --color-pm_gray_002: #efefef;
+    --color-pm_pink_001: #f4cccc;
+    --color-pm_blue_001: #4a86e8;
+
 }
 
 @layer base {
     html {
-        font-size: 10pt;
+        font-size: 83.3%;
     }
 
     body {
