--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,8 @@
 @import 'tom-select/dist/css/tom-select.css';
 @import 'tailwindcss' prefix(tw);
 
+@import './pm-table.css';
+
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
 @source '../**/*.blade.php';
@@ -20,6 +22,8 @@
     --color-pm_green_001: #d9ead3;
     --color-pm_gray_001: #666666;
     --color-pm_gray_002: #efefef;
+    --color-pm_gray_003: #d9d9d9;
+    --color-pm_gray_004: #f3f3f3;
     --color-pm_pink_001: #f4cccc;
     --color-pm_blue_001: #4a86e8;
     --color-pm_red_001: #ff0000;
@@ -55,3 +59,4 @@
         color: #111827;
     }
 }
+
