--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -24,8 +24,10 @@
     --color-pm_gray_002: #efefef;
     --color-pm_gray_003: #d9d9d9;
     --color-pm_gray_004: #f3f3f3;
+    --color-pm_gray_005: #bdbdbd;
     --color-pm_pink_001: #f4cccc;
     --color-pm_blue_001: #4a86e8;
+    --color-pm_blue_002: #cfe2f3;
     --color-pm_red_001: #ff0000;
 
 }
