--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,6 +25,7 @@
     --color-pm_gray_003: #d9d9d9;
     --color-pm_gray_004: #f3f3f3;
     --color-pm_gray_005: #bdbdbd;
+    --color-pm_gray_006: #cccccc;
     --color-pm_pink_001: #f4cccc;
     --color-pm_blue_001: #4a86e8;
     --color-pm_blue_002: #cfe2f3;
